# Ostrov1021

./: README.md
dns/: README.md  cut_dns.csv  cut_dns_categories_names.csv  day1.ipynb  day2.ipynb  requirements.txt  tutorial.ipynb  tutorial2.ipynb
dns/lab2/: DNS 1021-Copy1.ipynb  Day3.ipynb
dns/lab2/Chibisova/: Chibisova product_prediction day1.ipynb  Chibisova product_prediction day2 - gensim.ipynb  Chibisova product_prediction day2 - pca.ipynb  Chibisova product_prediction day2.ipynb
dns/lab2/workspace/: day1_evgeny_kanafin.ipynb  day2_evgeny_kanafin.ipynb
ice/: convert_to_png.ps1  ice.pptx  unzip_all.ps1
ice/extractor/: Program.cs  README.md  extractor.csproj
ice/extractor/Properties/: AssemblyInfo.cs
ice/imgwarp-opencv/: README.md  ice.patch
ice/imgwarp-opencv/src/: CMakeLists.txt
ice/imgwarp-opencv/src/demo/: CMakeLists.txt  main.cpp
